# annual

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
docs/source/: conf.py  faq.rst  index.rst  introduction.rst  requirements.txt  syntax.rst  user_guide.rst
src/annual/: __init__.py  datecalc.py  decorators.py  easter.py  model.py  registry.py  ruleparser.py
src/annual/functions/: __init__.py  easter_funcs.py
templates/: CHANGELOG.md.j2
tests/: conftest.py  dummy_module.py  test_datecalc.py  test_easter.py  test_model.py  test_pkg.py  test_registry.py  test_ruleparser.py
tests/features/ruleparser/: election_day.feature  leap.feature  mothers_day.feature
tests/functional/: test_election_day.py  test_leap.py  test_mothers_day.py
