[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "annual"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed"
]
dynamic = ["version", "description"]
dependencies = [
    "lark~=1.1"
]
requires-python = ">=3.11"

[[project.authors]]
name = "tom65536"
email = "peregrinus@planet.ms"

[project.urls]
Home = "https://github.com/tom65536/annual"
Source = "https://github.com/tom65536/annual"

[project.entry-points.annual]
annual = 'annual.functions'

[project.optional-dependencies]
build = [
    "build ~= 1.2"
]


[tool.isort]
line_length=79
multi_line_output=3
profile="black"

[tool.mypy]
warn_unused_configs = true
packages = "annual"

[tool.bandit]
tests = ["B101", "B102", "B110", "B112"]

[tool.vulture]
paths = ["src/annual", "tests"]

[tool.black]
skip-string-normalization = true
line-length=79

[tool.semantic_release]
version_variables = [
    "src/annual/__init__.py:__version__",
    "docs/source/conf.py:release"
]
build_command = """
    python -m pip install -e .[build]
    python -m build .
"""

[tool.pydoclint]
style = 'numpy'
